public/assets/css/style.css
#mothIcon {
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  height: 50px;
}
.task-minus-icon,
.project-minus-icon,
.myTask-minus-icon {
  padding-right: 10px;
}
#logInTitle {
  padding-top: 20px;
}
#tagline {
  padding-bottom: 5px;
}
#logInImg,
#signUpImg {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  height: 75%;
  width: 100%;
}
.userform {
  margin: 20px;
}
#createAccountTitle {
  padding-top: 20px;
}

#view-project {
  margin: 20px;
}

